# gene-fun

./: Dockerfile  index.htm  main.css
client/src/: EventBus.js
gene_fun/: .gitignore
gene_fun/client/: index.htm  index.html  main.css
gene_fun/server/: Cargo.toml
gene_fun/server/config/: database.json
gene_fun/server/src/: main.rs
gene_fun/server/src/api/: db.rs  mod.rs
gene_fun/server/src/api/controllers/: mod.rs  population.rs  training.rs  user.rs
gene_fun/server/src/api/models/: Population.rs  Training.rs  User.rs  mod.rs
gene_fun/server/src/api/services/: PopulationService.rs  TrainingService.rs  UserService.rs  mod.rs
src/: Agent.js  Brain.js  FileWriter.js  Genes.js  Population.js  Vector.js  World.js  utils.js
src/engine/: Agent.js  Brain.js  GenericNeuron.js  Genes.js  Population.js  Supervisor.js  UpdateWorker.js  WorkerMaster.js  WorkerMessageBus.js
src/neurons/: GenericNeuron.js  MoveDownNeuron.js  MoveLeftNeuron.js  MoveRandNeuron.js  MoveRightNeuron.js  MoveUpNeuron.js  NegateNeuron.js  SeeDownNeuron.js  SeeLeftNeuron.js  SeeRightNeuron.js  SeeUpNeuron.js  moveDownNeuron.js  moveLeftNeuron.js  moveRandNeuron.js  moveRightNeuron.js  moveUpNeuron.js  negateNeuron.js  neuronPool.js  processingVoidNeuron.js  seeDownNeuron.js  seeLeftNeuron.js  seeRightNeuron.js  seeUpNeuron.js  senseRandomNeuron.js  weightModifier.js
src/renderers/: AgentDetailsRenderer.js  AgentRenderer.js  AreaRenderer.js  BreedingAreasRenderer.js  MapRenderer.js  PageRenderer.js  StatsRenderer.js  WallRenderer.js  WorldRenderer.js
src/scope/: Board.js  Map.js  (+3 more)
(+99 files in other folders)
